5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1582_1333.log
== TEST (2019-03-12 17:48:36) 
-- CODE:
expressao = print(30-3**2+8//3**2*10)
print(expressao)
-- OUTPUT:
21
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:48:40) 
-- CODE:
expressao = print(30-3**2+8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.110528
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:49:44) 
-- CODE:
expressao = print(30-(3**2)+(8//3**2)*10)
print(expressao)
-- OUTPUT:
21
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:49:47) 
-- CODE:
expressao = print(30-(3**2)+(8//3**2)*10)
print(expressao)
-- EXECUTION TIME:
0.246845
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:02:26) 
-- CODE:
expressao = print(30-(3**2)+(8//(3**2)*10)
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:03:45) 
-- CODE:
expressao = print(30-¨3**2¨+¨8//¨3**2¨10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = print(30-¨3**2¨+¨8//¨3**2¨10)
                          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:04:03) 
-- CODE:
expressao = print(30-¨3**2¨+¨8//3**2¨10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = print(30-¨3**2¨+¨8//3**2¨10)
                          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:04:53) 
-- CODE:
expressao = print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                         ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:05:48) 
-- CODE:
expressao = print(30 – ¨3 ** 2¨+ 8 // ¨3 ** 2¨ * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = print(30 – ¨3 ** 2¨+ 8 // ¨3 ** 2¨ * 10)
                         ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:42:56) 
-- CODE:
expressao =
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao =
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:43:02) 
-- CODE:
expressao =
print(30-(3)**2+(8//(3)**2)*10)
-- ERROR:
File "XXXX", line 1
    expressao =
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:44:25) 
-- CODE:
print(30-(3)**2+(8//(3)**2)*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:44:33) 
-- CODE:
print(30-(3)**2+(8//(3)**2)*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:44:48) 
-- CODE:
print(30-(3)**2+(8//(3)**2)*10)
-- EXECUTION TIME:
0.201985
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
